--- a/11-ApplicationBaseROS/11.1-ROS1/11.1.1-EnvironmentBuilding.md
+++ b/11-ApplicationBaseROS/11.1-ROS1/11.1.1-EnvironmentBuilding.md
@@ -2,7 +2,7 @@
 
 The Raspberry Pi version comes with an Ubuntu (V-20.04) system and a built-in development environment, so you don’t need to build and manage it, Just update the mercury_ros package.
 
-`mercury_ros` is a ROS1 package launched by Elephant Robotics and applicable to its mycobot series of desktop six-axis robot arms.
+`mercury_ros` is a ROS1 package launched by Elephant Robot for its Mercury series robotic arms.
 
 ROS1 Project address: [http://github.com/elephantrobotics/mercury_ros](http://github.com/elephantrobotics/mercury_ros)
 
