--- a/11-ApplicationBaseROS/11.2-ROS2/11.2.1-EnvironmentBuilding.md
+++ b/11-ApplicationBaseROS/11.2-ROS2/11.2.1-EnvironmentBuilding.md
@@ -2,7 +2,7 @@
 
 The Raspberry Pi version comes with Ubuntu (V-20.04) system and built-in **ROS2 Galactic** development environment. There is no need to build and manage it. You only need to update the `mercury_ros2` package.
 
-`mercury_ros2` is a ROS2 package launched by Elephant Robot for its mycobot series desktop six-axis robotic arm.
+`mercury_ros2` is a ROS2 package launched by Elephant Robot for its Mercury series robotic arms.
 
 ROS2 project address: [http://github.com/elephantrobotics/mercury_ros2](http://github.com/elephantrobotics/mercury_ros2)
 
