--- a/3-UserNotes/3.1-SafetyInstruction.md
+++ b/3-UserNotes/3.1-SafetyInstruction.md
@@ -12,7 +12,7 @@
 
 <center>Table 1-1 Risk level Security risks</center>
 
-| <img src="image/danger.png" title="" alt="" data-align="center">       |
+| <img src="../resources/3-UserNotes/image/danger.png" title="" alt="" data-align="center">       |
 | ---------------------------------------------------------------------- |
 | 1 Personal injury or robot damage caused by improper handling of the robot. |
 | 2 If the robot is not fixed as required, for example, the screw is missing or the screw is not tight, or the locking capacity of the base is insufficient to support the robot to move at high speed, the robot will fall over, resulting in personal injury or robot damage. |
@@ -20,7 +20,7 @@
 
 <center>Table 1-2 Warning security risks</center>
 
-| <img src="image/warning.png" title="" alt="" data-align="center">               |
+| <img src="../resources/3-UserNotes/image/warning.png" title="" alt="" data-align="center">               |
 | ------------------------------------------------------------------------------- |
 | 1 When debugging the program, do not stay within the robot's motion range. Improper safety configuration may fail to avoid collisions, potentially causing personal injury. |
 | 2 The connection between robots and other equipment may introduce new hazards, necessitating a comprehensive risk assessment. |
@@ -32,7 +32,7 @@
 
 <center>Table 1-3 Potential safety hazards that may lead to electric shock</center>
 
-| <img src="image/careful.png" title="" alt="" data-align="center"> |
+| <img src="../resources/3-UserNotes/image/careful.png" title="" alt="" data-align="center"> |
 | ----------------------------------------------------------------- |
 | 1 Unknown hazards may arise when using non-original cables. |
 | 2 Electrical equipment contact with liquid may cause leakage hazard. |
@@ -75,25 +75,5 @@ https://www.elephantrobotics.com
 - Cost of using a security function at a low level.
 - Lo-fi does not conform to the use of robot performance parameters.
 
-## 4 Disclaimer
-
-Please read and understand the following disclaimer carefully before using the product:
-
-- **Safe Use:** This product is designed for specific application scenarios. Ensure that all safety guidelines and operating manuals are followed during use. Users should be properly trained in the use of the product and understand and comply with all relevant safety regulations.
-
-- **LIMITATION OF LIABILITY:** THE MANUFACTURER SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES RESULTING FROM THE USE OR MISUSE OF, OR ANY MATTER RELATING TO THE PRODUCTS. This disclaimer does not cover or exclude liability whose exclusion is not permitted by law.
-
-- **Technical Support:** Please read the product documentation carefully during installation and use, and seek technical support from the manufacturer if necessary. For technical support issues, please refer to the official documentation provided by the manufacturer or contact the relevant support channel.
-
-- **Software Updates:** The manufacturer may provide updates to product firmware or software. Users should regularly check and apply these updates to ensure product performance and security.
-
-- **Periodic Maintenance:** Users should inspect and maintain the product following the regular maintenance guidelines provided by the manufacturer. Regular maintenance and inspections help ensure long-term product performance.
-
-- **Customization and Modifications:** Products may not be customized, modified, or altered without the express permission of the manufacturer. Any unauthorized modifications may void the product's warranty and may have unpredictable effects on safety and performance.
-
-- **Legal Compliance:** Users should ensure that their use complies with all applicable laws and regulations. In some areas, the use of the product may be restricted by specific regulations.
-
-By using the Mercury A1 seven-axis collaborative robot, you agree to and accept these disclaimers. The manufacturer reserves the right to change product specifications, features, and disclaimers without prior notice.
-
 ----
-[← Previous Section](3-UserNotes.md#) | [Next Chapter →](/4-FirstInstallAndUse/README.md)
+[← Previous Section](3-UserNotes.md#) | [Next Chapter →](3.2-TransportandStorage.md)
