--- a/3-UserNotes/3.4-FAQsandSolutions.md
+++ b/3-UserNotes/3.4-FAQsandSolutions.md
@@ -20,4 +20,4 @@ If the listed problems can't help you solve and you have more after-sales questi
 [E-mail](support@elephantrobotics.com) : "support@elephantrobotics.com"
 
 ----
-[← Previous Section](3-UserNotes.md#) | [Next Chapter →](/4-FirstInstallAndUse/README.md)
+[← Previous Section](3.3-MaintenanceandCare.md#) | [Next Chapter →](/4-FirstInstallAndUse/4-FirstInstallAndUse.md)
