--- a/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
+++ b/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
@@ -82,4 +82,4 @@ When performing this operation, please refer to section [5.1-4 Robot Information
 
 ----
 
-[← Previous Page](4.2-ProductUnboxingGuide.md) | [Next Chapter →](../5-BasicApplication/5.2-ApplicationUse/5.2.1-myblockly/320m5/1-myBlocklyFirstUse.md)
+[← Previous Page](4.2-ProductUnboxingGuide.md) | [Next Chapter →](../5-BasicApplication/5-BasicApplication.md)
