--- a/9-AboutUs/9.2-contact.md
+++ b/9-AboutUs/9.2-contact.md
@@ -25,5 +25,7 @@ We will give a reply within 1-2 business days;
 We provide one-to-one service only for those users who have purchased   
 myCobot via WeChat.
 
-![](image/微信图片_20220225152258.jpg)
+![](../resources/9-AboutUs/image/微信图片_20220225152258.jpg)
+
+---
 [← Previous Page](./9.1-company.md)
