--- a/3-UserNotes/3.2-TransportandStorage.md
+++ b/3-UserNotes/3.2-TransportandStorage.md
@@ -1,2 +1,10 @@
+# TransportandStorage
+
+## 1 Packing and packing
+
+## 2 Logistics and transportation
+
+## 3 Equipment storage
+
 ----
-[← Previous Section](3-UserNotes.md#) | [Next Chapter →](/4-FirstInstallAndUse/README.md)
+[← Previous Section](3.1-SafetyInstruction.md#) | [Next Chapter →](3.3-MaintenanceandCare.md)
