--- a/9-AboutUs/9.1-company.md
+++ b/9-AboutUs/9.1-company.md
@@ -1,127 +1,119 @@
-# 大象机器人
+# ElephantRobot
 
-## 1 公司简介
+## 1 Company Profile
 
-![公司介绍.png](image/公司介绍.png)
+![Company Introduction.png](../resources/9-AboutUs/image/公司介绍.png)
 
-大象机器人(Elephant Robotics)立足于中国·深圳，是一家专注于机器人研发设计及自动化解决方案的高新科技企业。
+Elephant Robotics is based in Shenzhen, China, and is a high-tech enterprise focusing on robot R&D, design, and automation solutions.
 
-我们致力于为机器人教育及科研机构、商业场景、工业生产提供高柔性的协作机器人、简单易学的操作系统以及智能的自动化解决方案。其产品质量及智慧方案备受韩国、日本、美国、德国、意大利、希腊等数家来自世界500强名企工厂的一致认可与好评。
+The company is dedicated to providing highly flexible collaborative robots, easy-to-learn operating systems, and intelligent automation solutions for robotics education and scientific research institutions, commercial scenarios, and industrial production. Elephant Robotics has earned unanimous recognition and praise from several factories of the world's top 500 companies in countries such as South Korea, Japan, the United States, Germany, Italy, and Greece.
 
-大象机器人秉持“Enjoy Robots World”的愿景，倡导人与机器人的协同工作，让机器人成为人类工作生活的好帮手，帮助人们从简单、重复、枯燥的工作中解放出来，充分发挥人机协同优势，进而提高工作效率，帮助人类缔造美好新生活。
+Adhering to the vision of "Enjoy Robots World," Elephant Robotics advocates collaborative work between humans and robots, aiming to make robots valuable assistants in work and life. The company seeks to help people liberate themselves from simple, repetitive, and monotonous tasks, leveraging the benefits of human-machine collaboration to enhance work efficiency and create a better new life.
 
-未来，大象机器人希望通过新一代尖端科技推动机器人产业发展，携手与客户伙伴们共同开启自动化智能化新时代。
+In the future, Elephant Robotics aspires to propel the robot industry's development through cutting-edge technology and collaboratively usher in a new era of automation and intelligence.
 
----
+![Company History.jpg](../resources/9-AboutUs/image/公司历程.jpg)
 
-![公司历程.jpg](image/公司历程.jpg)
+## 2 Development Process
 
-## 2 发展历程
-
-2016.08 -----大象机器人有限公司正式成立
-
-2016.08 -----进入 HAX 孵化器，获得 SOSV 种子轮投资
-
-2016.08 ----- 开始研发 Elephant S 工业协作机器人
-
-2017.01 -----获评 “CES 中国最具创新企业 Top10”
-
-2017.04 -----出席汉诺威工业博览会及韩国自动化展览会
-
-2017.07 -----两位创始人入选福布斯亚洲评选的“30 位 30 岁以下商业精英”
-
-2017.10 -----第五代单臂工业协作机器人 Elephant S 问世
-
-2018.04 -----获得”云天使基金”天使轮投资
-
-2018.06 -----首次公开亮相 2018 年汉诺威世界工业博览会
-
-2018.06 -----获得长江商学院“智造创业 MBA 奖”
-
-2018.06 -----获得清华经管“创业加速器 X-elerator 奖”
-
-2018.11 -----获得亚洲智能硬件大赛深圳赛区第二名
-
-2018.11 -----获得高工金球奖“最具投资企业奖”
-
-2019.03 -----获得高工金球奖“领军人物奖”
-
-2019.04 -----2019年3月  Catbot获“工业机器人创新奖”
-
-2019.09 -----出席华为欧洲生态大会(HCE)，正式成为华为生态伙伴一员
-
-2019.11 -----大象机器人携手哈工大出席IROS国际智能机器人与系统大会
-
-2019.12 -----大象机器人-华南理工大学“智能机器人联合开发实验室”正式揭牌
-
-2019.12 -----荣获高工2019年度“创新技术奖”
-
-2019.12 -----荣获高工2019年度“十大快速成长企业”
-
-2019.12 -----荣获深圳装备工业-工业机器人细分领域-“新锐企业奖”
-
-2019.12 -----世界首款仿生机器猫MarsCat问世
-
-2020.05 -----创始人获得2019年度深圳市机器人新锐人物奖
-
-2020.10 -----全球最轻最小的六轴协作机器人myCobot问世
-
-2021.03 -----面向科研的最小协作机器人myCobotPro 320问世
-
-2021.05 -----火星仿生猫MarsCat获得新华财经、中国日报、南京日报、哈尔滨日报等多家媒体的竞相报道
-
-2021.07 -----发布最小的复合机器人底盘 – 小象移动机器人myAGV
-
-2021.09 -----全球首款全包裹式的四轴机械臂-小象码垛机械臂myPalletizer问世
-
-2022.01 -----获36氯、极客公园关于大象机器人在轻是化消费级机器人行业系列报道
-
-2022.02 -----MarsCat、myCobot 亮相春晚夫视频直播，参与深圳卫视过年特备节目
-
-2022.05 -----最紧凑的小六轴机械臂mechArm 问世，能人工智能机器人教育
-
-2022.06 -----联合Unity引擎，基于myCobot 机器人，推出人工智能机器人实践入门书+籍(国际课程)
-
-2022.07 -----发布人工智能时代的仿真陪伴机器猫米塔猫metaCat
-
-2022.07 -----发布史上最小双臂协作机器人mybuddy
-
-2022.08 -----获得“十大非工业技术创新奖”
-
-2022.08 -----创始人获“2022深圳市机器人新锐人物奖”
-
-2022.11 -----科大讯飞AI开发者大赛real time enganement（实时互动）赛道亚军
-
-2022.11 -----2022世界声博会1024科博展最佳机器人奖
-
-2022.12 -----央视报道
-
----
-
-## 3 相关链接
-
-- 官网：[https://www.elephantrobotics.com](https://www.elephantrobotics.com)
-
-- 购买链接
+2016.08 ----- Elephant Robot Co., Ltd. was officially established.
   
-  - 淘宝：[https://shop504055678.taobao.com](https://shop504055678.taobao.com)
+2016.08 ----- Entered HAX incubator and obtained SOSV seed round investment.
   
-  - shopify：[https://shop.elephantrobotics.com/](https://shop.elephantrobotics.com/)
-
-- 视频
+2016.08 ----- Started developing Elephant S industrial collaborative robot.
   
-  - bilibili：[大象机器人的个人空间-大象机器人个人主页-哔哩哔哩视频](https://space.bilibili.com/2126215657)
+2017.01 ----- Awarded "Top 10 Most Innovative Companies in China at CES."
   
-  - youtube：[Elephant Robotics - YouTube](https://www.youtube.com/c/Elephantrobotics)
+2017.04 ----- Attended Hannover Industrial Fair and Korea Automation Exhibition.
+  
+2017.07 ----- The two founders were selected as "30 Business Elites Under 30" by Forbes Asia.
+  
+2017.10 ----- Launched the fifth generation single-arm industrial collaborative robot Elephant S.
+  
+2018.04 ----- Obtained angel round investment from "Cloud Angel Fund."
+  
+2018.06 ----- First public appearance at the 2018 Hannover World Industrial Fair.
+  
+2018.06 ----- Received the "Intelligent Manufacturing Entrepreneurship MBA Award" from Cheung Kong Graduate School of Business.
+  
+2018.06 ----- Received the "X-elerator Award" from Tsinghua SEM.
+  
+2018.11 ----- Won second place in the Shenzhen Division of the Asian Intelligent Hardware Competition.
+  
+2018.11 ----- Won the "Most Investment Enterprise Award" at the Golden Globe Award.
+  
+2019.03 ----- Won the "Leadership Award" at the Golden Globe Award.
+  
+2019.04 ----- March 2019 Catbot won the "Industrial Robot Innovation Award."
+  
+2019.09 ----- Attended Huawei European Ecosystem Conference (HCE) and officially became a member of Huawei’s ecological partners.
+  
+2019.11 ----- Elephant Robot and Harbin Institute of Technology attended the IROS International Intelligent Robots and Systems Conference.
+  
+2019.12 ----- Elephant Robot-South China University of Technology's "Intelligent Robot Joint Development Laboratory" was officially unveiled.
+  
+2019.12 ----- Won the 2019 "Innovation Technology Award" from Gaogong.
+  
+2019.12 ----- Won the "Top Ten Fast-Growing Enterprises" of Gaogong in 2019.
+  
+2019.12 ----- Won the Shenzhen Equipment Industry-Industrial Robot Segment-"New Enterprise Award."
+  
+2019.12 ----- Launched the world’s first bionic robotic cat, MarsCat.
+  
+2020.05 ----- The founder won the 2019 Shenzhen Robot Emerging Figure Award.
+  
+2020.10 ----- Launched myCobot, the world’s lightest and smallest six-axis collaborative robot.
+  
+2021.03 ----- Launched myCobotPro 320, the smallest collaborative robot for scientific research.
+  
+2021.05 ----- MarsCat received competing reports from Xinhua Finance, China Daily, Nanjing Daily, Harbin Daily, and other media.
+  
+2021.07 ----- Released the smallest composite robot chassis – the little elephant mobile robot myAGV.
+  
+2021.09 ----- Launched the world's first fully wrapped four-axis robotic arm - the little elephant palletizing robotic arm myPalletizer.
+  
+2022.01 ----- Obtained a series of reports from 36 Chlorine and Geek Park on the role of Elephant Robot in the light consumer robot industry.
+  
+2022.02 ----- MarsCat and myCobot appeared in the Spring Festival Gala live video broadcast and participated in Shenzhen Satellite TV’s special New Year program.
+  
+2022.05 ----- Launched the most compact small six-axis robotic arm mechArm, capable of artificial intelligence robot education.
+  
+2022.06 ----- Combined with Unity engine, based on myCobot robot, launched artificial intelligence robot practical introduction book + books (international courses).
+  
+2022.07 ----- Released metaCat, a simulation companion robot cat in the artificial intelligence era.
+  
+2022.07 ----- Released mybuddy, the smallest dual-arm collaborative robot in history.
+  
+2022.08 ----- Won the "Top Ten Non-Industrial Technology Innovation Awards."
+  
+2022.08 ----- The founder won the "2022 Shenzhen Robot Emerging Figure Award."
+  
+2022.11 ----- First runner-up in iFLYTEK AI Developer Competition real-time engagement (real-time interaction) track.
+  
+2022.11 ----- Best Robot Award at 2022 World Acoustic Expo 1024 Science and Technology Expo.
+  
+2022.12 ----- CCTV report.
 
--   Facebook : https://www.facebook.com/mycobotcreator/
+## 3 Related Links
 
--   Linkedin : https://www.linkedin.com/company/18319865
+- Official website: [https://www.elephantrobotics.com](https://www.elephantrobotics.com)
 
-- 	X (Twitter) : https://twitter.com/CobotMy
+- Purchase links:
+  - Taobao: [https://shop504055678.taobao.com](https://shop504055678.taobao.com)
+  - Shopify: [https://shop.elephantrobotics.com/](https://shop.elephantrobotics.com/)
 
--   Discord : https://discord.gg/2MAherp7nt
+- Video:
+  - Bilibili: [Elephant Robot’s personal space-Elephant Robot’s personal homepage-Bilibili Video](https://space.bilibili.com/2126215657)
+  - YouTube: [Elephant Robotics - YouTube](https://www.youtube.com/c/Elephantrobotics)
 
-- 	Hackster : https://www.hackster.io/elephant-robotics
+- Facebook: [https://www.facebook.com/mycobotcreator/](https://www.facebook.com/mycobotcreator/)
 
-[← Previous Page](./9-AboutUs.md)| [Next Page →](./9.2-contact.md)
+- Linkedin: [https://www.linkedin.com/company/18319865](https://www.linkedin.com/company/18319865)
+
+- Twitter: [https://twitter.com/CobotMy](https://twitter.com/CobotMy)
+
+- Discord: [https://discord.gg/2MAherp7nt](https://discord.gg/2MAherp7nt)
+
+- Hackster: [https://www.hackster.io/elephant-robotics](https://www.hackster.io/elephant-robotics)
+
+[← Previous Page](./9-AboutUs.md) | [Next Page →](./9.2-contact.md)
