--- a/6-SDKDevelopment/6.1-ApplicationBasePython.md
+++ b/6-SDKDevelopment/6.1-ApplicationBasePython.md
@@ -1,524 +1,516 @@
-## 6.1 基于python开发使用
+## 6.1 Development and Use Based on Python
 
 
 
-### 6.1.2 API使用说明 
+### 6.1.2 API usage instructions
 
-API（Application Programming Interface），即应用程序接口函数，是一些预先定义好的函数。在使用下列函数接口的时候请先在开头导入我们的API库，即输入下方代码，否则无法运行成功：
+API (Application Programming Interface), also known as Application Programming Interface functions, are predefined functions. When using the following function interfaces, please import our API library at the beginning by entering the following code, otherwise it will not run successfully:
 
-#### 1. 系统与产品信息
+#### 1.  System Status
 
 **1.1** `get_system_version()`
 
-- **功能：** 读取主控版本
-- **返回值：** 主控版本
+- **function：** get system version
+- **Return value：** system version
 
 **1.2**`get_robot_id()`
 
-- **功能：** 检测机器人型号
+- **function：** get robot id
 
-- **返回值：** 定义规则：实际机器型号。举例如下：
-  + A450：4500；
-  + 280：2800；
-
-  + B450左臂：4501；
-  + B450右臂：4502；
+- **Return value：** Definition Rule: Actual machine model.
 
 **1.3** `get_atom_version()`
 
-- **功能：** 获取末端版本号
-- **返回值：**  末端参数（`float`)
+- **function：** Get the end version number
+- **Return value：**  End parameters（`float`)
 
-#### 2. 机器人整体运行状态
-
+#### 2. Overall Status
 
 **2.1**  `power_on()`
 
-- **功能:**  机械臂打开电源
+- **function:**  atom open communication (default open)
+  + Attentions： After executing poweroff or pressing emergency stop, it takes 7 seconds to power on and restore power
 
-+ 注意事项： 执行 poweroff 后或者按下急停后上电恢复时间需要 7s
-
-- **返回值:**  无 
+- **Return value:**  NULL 
 
 **2.2**  `power_off()`
 
-- **功能:** 机械臂关闭电源
+- **function:** Power off of the robotic arm
 
-- **返回值:** 无
+- **Return value:** NULL
 
 **2.3**  `is_power_on()`
 
-- **功能:**  控制核心连接状态查询
+- **function:**  judge whether robot arms is powered on or not
 
-- **返回值:**
-  - 1:  机械臂已通电
-  - 0:  机械臂已断电
-  - -1:  错误
+- **Return value:**
+  - 1:  power on
+  - 0:  power off
+  - -1:  error
 
 **2.4**  `release_all_servos()`
 
-- **功能:**  机器人关闭力矩输出
-  + 注意事项：关节掉使能后，需要上使能才可以控制 1s 内
-- **参数说明**：`data`（可选）：放松关节的方式。默认为阻尼（damping）模式，如果提供了 `data` 参数，则可以指定为非阻尼模式（1 - Undamping）。
-- **返回值:** 无
+- **function:**  release all robot arms
+  + Attentions：After the joint is disabled, it needs to be enabled to control within 1 second
+- **Parameters**：`data`（optional）：The way to relax the joints. The default is damping mode, and if the 'data' parameter is provided, it can be specified as non damping mode (1- Undamping).
+- **Return value:** NULL
 
-**2.5**  `找不到()`
+**2.5**  `get_angle()`
 
-- **功能:**  获取单关节角度
-  + 注意事项：关节掉使能后，需要上使能才可以控制 1s 内
-- **参数说明**：
-- **返回值:**  
+- **function:**  Get single joint angle
+- **Parameters**： joint_id (int): 1 ~ 7 
+- **Return value:**   NULL
 
 **2.6**  `focus_servo(servo_id)`
 
-- **功能:**  机器人打开力矩输出
-- **参数说明**：`servo_id`输入舵机的ID，参数范围为1-7
-- **返回值:** 无
+- **function:**  power on designated servo
+- **Parameters**：`servo_id  `Enter the ID of the servo, with a parameter range of 1-7
+- **Return value:** NULL
 
-**2.7**  `找不到（ ）`
+**2.7**  `set_break（joint_id, value）`
 
-- **功能:**  机器人关闭/打开刹车
-- **参数说明**： 
-- **返回值:** 无
+- **function:**  Set break point
+- **Parameters**：
+  + `joint_id`: int. joint id 1 - 7
+  + `value`: int. 0 - disable, 1 - enable
+- **Return value:** 0 : faile; 1 : success 
 
-#### 3.MDI运行与操作
+#### 3.MDI Mode and Operation
 
 **3.1**  `get_angles()`
 
-- **功能:** 获取所有关节的度数
-- **返回值**:  `list `一个浮点值的列表代，表示所有关节的角度
+- **function:** get the degree of all joints
+- **Return value**:  `list  `a float list of all degree
 
 **3.2**  `send_angle(id, degree, speed)`
 
-- **功能:** 发送指定的单个关节运动至指定的角度
-- **参数说明:**
-  - `id`: 代表机械臂的关节，范围1-7
-  - `degree`: 表示关节的角度 ` (float)` (-170 ~ 170)
-  - `speed`：表示机械臂运动的速度，范围 0~100
-- **返回值:** 无 
+- **function:** send one degree of joint to robot arm
+- **Parameters:**
+  - `id`: Joint id(`genre.Angle`) / int 1-7
+  - `degree`: degree value( ` (float)` (-170 ~ 170)
+  - `speed`：the speed and range of the robotic arm's movement 0~100
+- **Return value:** NULL 
 
 **3.3**  `send_angles(angles, speed)`
 
-- **功能：** 发送所有角度给机械臂所有关节
-- **参数说明:**
-  - `angles`: `(List[float])` 包含所有关节的角度，长度为 7
-  - `speed`: 表示机械臂运动的速度，取值范围是0-100
-- **返回值:** 无 
+- **function：** Send all angles to all joints of the robotic arm
+- **Parameters:**
+  - `angles`: a list of degree value(`List[float]`), length 7
+  - `speed`:  (`int`) 0 ~ 100
+- **Return value:** NULL 
 
 **3.4**  `get_coords()`
 
-- **功能:** 从基于底座的坐标系统，获取机器人手臂坐标。
-- **返回值:** `list`包含坐标和姿态的列表[x, y, z, rx, ry, rz]
+- **function:** Obtain robot arm coordinates from a base based coordinate system
+- **Return value:**  a float list of coord:[x, y, z, rx, ry, rz]
 
 **3.5**  `send_coord(id, coord, speed)`
 
-- **功能:** 发送单个坐标值给机械臂进行移动
-- **参数说明:**
-  - `id`:代表机械臂的坐标，范围1-6
-  - `coord`: 输入您想要到达的坐标值（`float`）
-  - `speed`: 表示机械臂运动的速度(`int`)，范围是0-100
-- **返回值**：无
+- **function:** send one coord to robot arm
+- **Parameters:**
+  - `id`:send one coord to robot arm,1-6
+  - `coord`: coord value(（`float`）
+  - `speed`: (`int`),0-100
+- **Return value**：NULL
 
 **3.6**  `send_coords(coords, speed, mode)`
 
-- **功能:** 发送整体坐标和姿态,让机械臂头部从原来点移动到您指定点
-- **参数说明:**
-  - coords: ：`[x,y,z,rx,ry,rz]`的坐标值，长度为6
-  - speed`(int)`: 表示机械臂运动的速度，范围是0-100
-  - mode: (`int`):  取值限定 0 和 1
-    - 0 表示机械臂头部移动的路径为非线性，即随机规划路线，只要机械臂头部以保持规定的姿态移动到指定点即可。
-    - 1 表示机械臂头部移动的路径为线性的，即智能规划路线让机械臂头部以直线的方式移动到指定点。
-- **返回值**： 无
+- **function: **Send overall coordinates and posture to move the head of the robotic arm from its original point to your specified point
+- **Parameters:**
+  - coords: ： a list of coords value `[x,y,z,rx,ry,rz]`,length6
+  - speed`(int)`:  0 ~ 100
+  - mode: (`int`):  `0` - angular, `1` - linear
+    - 0  The path of the head movement of the robotic arm is non-linear, that is, the path is randomly planned, as long as the head of the robotic arm moves to the specified point in a specified posture.
+    - 1 The path of the robotic arm head movement is linear, that is, the intelligent planning route allows the robotic arm head to move in a straight line to a specified point.
+- **Return value**： NULL
 
 **3.7**  `pause()`
 
-- **功能:**  控制核心暂停进行的指令，停止所有的移动指令
-- **返回值**: 无
+- **function:**  Control the instruction to pause the core and stop all movement instructions
+- **Return value**: NULL
 
 **3.8**  `is_paused()`
 
-- **功能:**  检测程序是否暂停了移动的指令
-- **返回值:**
-  - `1` - 已经暂停
-  - `0` - 没有暂停
-  - `-1` - 错误
+- **function:**  Check if the program has paused the move command
+- **Return value:**
+  - `1` - paused
+  - `0` - not paused
+  - `-1` - error
 
 **3.9**  `resume()`
 
-- **功能:**  程序恢复移动指令，继续完成上一个指令
-- **返回值**: 无
+- **function:**  resume the robot movement and complete the previous command
+- **Return value**: NULL
 
 **3.10**  `stop()`
 
-- **功能:** 让机械停止所有运动
-- **返回值**: 无
+- **function:** stop all movements of robot
+- **Return value**: NULL
 
 **3.11**  `is_in_position(data, flag)`
 
-- **功能** :判断机器人有没有到达指定的位置
-- **参数说明:**  
-  - data:  提供一组数据可以是角度也可以是坐标值, 若输入角度长度范围为 7, 若输入坐标值长度范围为6
-  - flag数据类型(取值范围0或1)
-    - `0`: 表示给入的数值是角度值
-    - `1`: 表示给入的数值是坐标值
-- **返回值**:
-  - `1` - 已到达
-  - `0` - 未到达
-  - `-1 `   - 错误
+- **function** : judge whether in the position.
+- **Parameters:**  
+  - data:  Provide a set of data that can be angles or coordinate values. If the input angle length range is 7, and if the input coordinate value length range is 6
+  - flag data type (value range 0 or 1)
+    - `0`: angle value
+    - `1`: coord_id
+- **Return value**:
+  - `1` - true
+  - `0` - false
+  - `-1 `   - error
 
 **3.12**  `is_moving()	`
 
-- **功能:**  检测机器人是否在运动
-- **返回值:**
-  - `1` 正在移动
-  - `0` 没有移动
-  - `-1` 错误
+- **function:**  judge whether the robot is moving
+- **Return value:**
+  - `1` moving
+  - `0` not moving
+  - `-1` error
 
-#### 4. JOG 模式和操作
+#### 4. JOG Mode and Operation
 
 **4.1** `jog_angle(joint_id, direction, speed)`
 
-- **功能:** 关节控制
-- **参数说明**:
-  - `joint_id`: 代表机械臂的关节，按照关节id给入1~7来表示
-  - `direction`: 要控制机器臂移动的方向，给入0 为负值移动，给入1为正值移动
-  - `speed`: 速度 0 ~ 100
-- **返回值**：无
+- **function:** jog control angle
+- **Parameters**:
+  - `joint_id`: Represents the joints of the robotic arm, represented by joint IDs ranging from 1 to 7
+  - `direction`: To control the direction of movement of the robotic arm, input 0 as negative value movement and input 1 as positive value movement
+  - `speed`:  0 ~ 100
+- **Return value**：NULL
 
 **4.2** `jog_coord(coord_id, direction, speed)`
 
-- **功能:**  坐标控制
-- **参数说明:**
-  - `coord_id`: (`int`) 机械臂坐标范围 1 ~ 6
-  - `direction`: 要控制机器臂移动的方向，`0` - 负值移动, `1` - 正值移动
-  - `speed`: 速度0 ~ 100
-- **返回值**：无
+- **function:**  jog control coord.
+- **Parameters:**
+  - `coord_id`: (`int`) Coordinate range of the robotic arm: 1~6
+  - `direction`: To control the direction of machine arm movement, '0' - negative value movement, '1' - positive value movement
+  - `speed`: 0 ~ 100
+- **Return value**：NULL
 
 **4.3** `jog_increment(joint_id,increment,speed)`
 
-- **功能:**  步进模式
-- **参数说明**:
-  - `joint_id`: 关节范围1-7
+- **function:**  step mode
+- **Parameters**:
+  - `joint_id`: 1-7
   - `increment`:
-  - `speed`: 速度0 ~ 100
-- **返回值**: 无
+  - `speed`: 0 ~ 100
+- **Return value**: NULL
 
-#### 5. 坐标控制姿态偏转角
+#### 5. Coordinate controlled attitude deviation angle
 
 **5.1** `get_solution_angles()`
 
-- **功能:** 获取零空间偏转角数值
-- **返回值**：零空间偏转角数值
+- **function:** Obtain the value of zero space deflection angle
+- **Return value**：Zero space deflection angle value
 
 **5.2** `set_solution_angles(angle, speed)`
 
-- **功能:** 获取零空间偏转角数值
+- **function:** Obtain the value of zero space deflection angle
 
-- **参数说明:**  
-
-  + ` angle` : 输入关节1的角度范围，角度范围-90～90
-
+- **Parameters:**  
+  + ` angle` : Input the angle range of joint 1, angle range -90 to 90
+  
   + `speed` : 1 - 100.
+  
+- **Return value:** Zero space deflection angle value
 
-- **返回值:** 零空间偏转角数值
-
-#### 6. 设置软件关节限位
+#### 6. Set software joint limit
 
 **6.1** `get_joint_min_angle(joint_id)`
 
-- **功能:** 读取关节最小角度
-- **参数说明:**  
-  + ` joint_id` : 输入关节ID(范围1-7)
-- **返回值**：`float` 角度数值
+- **function:** Read the minimum joint angle
+- **Parameters:**  
+  + ` joint_id` : Enter joint ID (range 1-7)
+- **Return value**：`float` Angle value
 
 **6.2** `get_joint_max_angle(joint_id)`
 
-- **功能:** 读取关节最大角度
-- **参数说明:**  
-  + ` joint_id` : 输入关节ID(范围1-7)
-- **返回值:** `float` 角度数值
+- **function:** Read the maximum joint angle
+- **Parameters:**  
+  + ` joint_id` : Enter joint ID (range 1-7)
+- **Return value:** `float` Angle value
 
-#### 7. 关节电机设置
+#### 7. Joint motor settings
 
 **7.1** `is_servo_enable(servo_id)`
 
-- **功能:** 检测关节连接状态
-- **参数说明:** ` servo id` 范围 1-7
-- **返回值:**
-  - `1`:  连接成功
-  - `0`:  未连接
-  - `-1`:  错误
+- **function:** Detecting joint connection status
+- **Parameters:** ` servo id` 1-7
+- **Return value:**
+  - `1`:  Connection successful
+  - `0`:  not connected
+  - `-1`:  error
 
 **7.2** `is_all_servo_enable()`
 
-- **功能:** 检测所有关节连接状态
-- **返回值:**
-  - `1`: 连接成功
-  - `0`: 未连接
-  - `-1`: 错误
+- **function:** Detect the status of all joint connections
+- **Return value:**
+  - `1`:  Connection successful
+  - `0`:  not connected
+  - `-1`: error
 
 **7.3** `set_servo_calibration(servo_id)`
 
-- **功能:** 校准关节执行器的当前位置为角度零点，对应的电位值为2048
-- **参数说明**:
-  - `servo_id`: 关节序号范围1 - 7
-- **返回值:** 无
+- **function:** The current position of the calibration joint actuator is the angle zero point, corresponding to a potential value of 2048
+- **Parameters**:
+  - `servo_id`: 1 - 7
+- **Return value:** NULL
 
 **7.4** `release_servo(servo_id,mode)`
 
-- **功能:** power on designated servo
-- **参数说明**: 
+- **function:** power on designated servo
+- **Parameters**: 
   + `servo_id`: 1 ~ 7
-  + `mode`: 默认数值为0，表示阻尼模式； 数值为1: 取消阻尼；
-- **返回值:** None
+  + `mode`: The default value is 0, indicating damping mode; Value 1: Cancel damping;
+- **Return value:** None
 
 **7.5** `focus_servo(servo_id)`
 
-- **功能**:  使得单个电机上电 
-- **参数说明**: `servo_id`: 1 ~ 7
-- **返回值:** 无
+- **function**:  Power on individual motors
+- **Parameters**: `servo_id`: 1 ~ 7
+- **Return value:** NULL
 
 **7.6** `set_gripper_state(flag, speed, _type_1=None)`
 
-- **功能**:  自适应夹爪使能
+- **function**:  Adaptive gripper enable
 
-- **参数说明**: 
+- **Parameters**: 
 
-  + `flag (int) `: 0 - 开启, 1 - 关闭, 254 - 释放
+  + `flag (int) `: 0 - open 1 - close, 254 - release
 
-  + `speed (int)`:  速度1 ~ 100
+  + `speed (int)`:  1 ~ 100
 
   + `_type_1 (int)`:  
 
-    `1` : 自适应抓手（默认状态为1）
+    `1` : Adaptive gripper (default state is 1)
 
-    `2` : 5指灵巧的手
+    `2` : A nimble hand with 5 fingers
 
-    `3` : 平行夹持器
+    `3` : Parallel gripper
 
-    `4` : 灵活的夹持器
+    `4` : Flexible gripper
 
-- **返回值:** 无
+- **Return value:** NULL
 
 **7.7** `set_gripper_enabled(value)`
 
-- **功能**:  自适应夹持器使能设置
-- **参数说明**: 
-  + `value`  1 : 开启  0 : 释放
-- **返回值:** 无
+- **function**:  Adaptive gripper enable setting
+- **Parameters**: 
+  + `value`  1: Enable 0: Release
+- **Return value:** NULL
 
 **7.8** `get_zero_pos()`
 
-- **功能**:  读取零位编码器值
-- **返回值:** `list `七个关节的零编码器的值
+- **function**:  Read the zero encoder value
+- **Return value:** `list   `The value of the zero encoder for seven joints
 
 **7.9** `is_init_calibration()`
 
-- **功能**:  检测是否已设置零位
-- **返回值:**  `bool`类型，如果机器人已初始化以进行校准，则为 真True，否则为假 False
+- **function**:  Check if the zero position has been set
+- **Return value:**  `bool`，True if the robot has been initialized for calibration, otherwise False
 
-#### 8.  末端IO控制
+#### 8.  End IO control
 
 **8.1** `set_digital_output(pin_no, pin_signal)`
 
-- **功能:**  设置IO
-- **参数说明**
-  - `pin_no` (int): 引脚号 
+- **function:**  set IO
+- **Parameters**
+  - `pin_no` (int): Pin number 
   - `pin_signal` (int): 0 / 1
 
-* **返回值:** 无
+* **Return value:** NULL
 
 **8.2** `get_digital_input(pin_no)`
 
-- **功能:** 读取 IO
-- **参数说明**: `pin_no` (int)
-- **返回值**: 信号值
+- **function:** read  IO
+- **Parameters**: `pin_no` (int)
+- **Return value**: signal 
 
-#### 9.  末端夹爪控制接口
+#### 9.  End clamp control interface
 
 **9.1** `set_gripper_state(flag, speed, _type_1=None)`
 
-- **功能**:  设置夹持器开关状态
+- **function**:  Set gripper switch status
 
-- **参数说明**: 
+- **Parameters**: 
 
-  + `flag (int) `: 0 - 开启, 1 - 关闭, 254 - 释放
+  + `flag (int) `: 0 - open, 1 - close, 254 - release
 
-  + `speed (int)`:  速度1 ~ 100
+  + `speed (int)`:  1 ~ 100
 
   + `_type_1 (int)`:  
 
-    `1` : 自适应抓手（默认状态为1）
+    `1`: Adaptive gripper (default state is 1)
 
-    `2` : 5指灵巧的手
+     `2 `: A nimble hand with 5 fingers
 
-    `3` : 平行夹持器
+    `3`: Parallel gripper
 
-    `4` : 灵活的夹持器
+    `4`: Flexible gripper
 
-- **返回值:** 无
+- **Return value:** NULL
 
 **9.2** `set_gripper_value(gripper_value, speed, gripper_type=None)`
 
-- **功能**:  设置夹爪角度
+- **function**:  Setting the Claw Angle
 
-- **参数说明**: 
+- **Parameters**: 
 
-  + `gripper_value `: 0 - 开启, 1 - 关闭, 254 - 释放
+  + `gripper_value `: 0 - open, 1 - close, 254 - release
 
-  + `speed (int)`:  速度1 ~ 100
+  + `speed (int)`:  1 ~ 100
 
   + `gripper_type (int)`:
 
-    `1` : 自适应抓手（默认状态为1）
+    `1`: Adaptive gripper (default state is 1)
 
-    `2` : 5指灵巧的手
+     `2 `: A nimble hand with 5 fingers
 
-    `3` : 平行夹持器
+    `3`: Parallel gripper
 
-    `4` : 灵活的夹持器
+    `4`: Flexible gripper
 
-- **返回值:** 无
+- **Return value:** NULL
 
 **9.3** `set_gripper_calibration(mode)`
 
-- **功能:** 将当前位置设置为0，将当前位置值设置为2048
-- **返回值**：无
+- **function:** Set the current position to 0 and the current position value to 2048
+- **Return value**：NULL
 
 **9.4** `set_gripper_mode(mode)`
 
-- **功能:**  设置夹爪模式
-- **返回值**：无
+- **function:**  Set gripper mode
+- **Return value**：NULL
 
 **9.5** `get_gripper_mode()`
 
-- **功能:**  获取夹爪模式
-- **返回值**：0 - 透传模式 1-端口模式 
+- **function:**  Obtain gripper mode
+- **Return value**：0 - Transparent mode 1- Port mode
 
 **9.6** `is_btn_clicked()`
 
-- **功能:**  末端led按钮是否按下
-- **返回值**：0 - 未被按下 1-已按下
+- **function:**  Is the end LED button pressed
+- **Return value**：0- not pressed 1- pressed
 
-#### 10. Atom末端RGB
+#### 10. Atom end RGB
 
 **10.1** `set_color(r, g, b)`
 
-- **功能:** 设置RGB颜色
-- **参数说明:**
+- **function:** Set RGB color
+- **Parameters:**
   - `R`: 0-255
   - `G`: 0-255
   - `B`: 0-255
-- **返回值:** 无
+- **Return value:** NULL
 
-#### 11. 拖动示教
+#### 11. Drag Teaching
 
 **11.1** `drag_tech_save()`
 
-- **功能:** 开始录制拖动示教点。
-  + 注意： 为了显示最佳的运动效果，录制时间不应超过90秒
-- **返回值:** 无
+- **function:** Start recording and dragging teaching points.
+  + Note: In order to display the best sports effect, the recording time should not exceed 90 seconds
+- **Return value:** NULL
 
 **11.2** `drag_tech_execute()`
 
-- **功能:** 开始拖动示教点，只执行一次。
-- **返回值:** 无
+- **function:** Start dragging the teach-in point, executing it only once.
+- **Return value:** NULL
 
 **11.3** `drag_tech_pause()`
 
-- **功能:** 暂停采样
-- **返回值:** 无
+- **function:** Pause sampling
+- **Return value:** NULL
 
-#### 12. 笛卡尔空间坐标参数设定
+#### 12. Coordinate Setting
 
 **12.1** `set_tool_reference(coords)`
 
-- **功能:** 设置工具坐标系
-- **参数说明**：`coords`: (`list`) [x, y, z, rx, ry, rz].
-- **返回值:** 无
+- **function:**  Set tool coordinate system.
+- **Parameters**：`coords`: (`list`) [x, y, z, rx, ry, rz].
+- **Return value:** NULL
 
 **12.2** `get_tool_reference(coords)`
 
-- **功能:** 获取工具坐标系
-- **返回值:** `oords`: (`list`) [x, y, z, rx, ry, rz]
+- **function:** Get tool coordinate system.
+- **Return value:** `oords`: (`list`) [x, y, z, rx, ry, rz]
 
 **12.3** `set_world_reference(coords)`
 
-- **功能:** 设置世界坐标系
-- **参数说明**：`coords`: (`list`) [x, y, z, rx, ry, rz].
-- **返回值:** 无
+- **function:** Set world coordinate system.
+- **Parameters**：`coords`: (`list`) [x, y, z, rx, ry, rz].
+- **Return value:** NULL
 
 **12.4** `get_world_reference()`
 
-- **功能:** 获取世界坐标系
-- **返回值:** `list` [x, y, z, rx, ry, rz].
+- **function:** Get world coordinate system.
+- **Return value:** `list` [x, y, z, rx, ry, rz].
 
 **12.5** `set_reference_frame(rftype)`
 
-- **功能:** 设置基坐标系
-- **参数说明：**`rftype`: 0 - base 1 - tool. 
-- **返回值:** 无
+- **function:** Set base coordinate system.
+- **Parameters：**`rftype`: 0 - base 1 - tool. 
+- **Return value:** NULL
 
 **12.6** `drag_tget_reference_frame()`
 
-- **功能:** 获取基坐标系
-- **返回值:** 0 - base 1 - tool.
+- **function:** Get base coordinate system.
+- **Return value:** 0 - base 1 - tool.
 
 **12.7** `set_movement_type(move_type)`
 
-- **功能:** 设置移动类型
-- **参数说明**：`move_type`: 1 - movel, 0 - moveJ.
-- **返回值:** 无
+- **function:** Set movement type.
+- **Parameters**：`move_type`: 1 - movel, 0 - moveJ.
+- **Return value:** NULL
 
 **12.8** `get_movement_type()`
 
-- **功能:** 获取移动类型
-- **返回值:**   1 - movel, 0 - moveJ
+- **function:** Get movement type.
+- **Return value:**   1 - movel, 0 - moveJ
 
 **12.9** `set_end_type(end)`
 
-- **功能:** 设置末端坐标系
-- **参数说明**：`end`:  0 - 法兰, 1 - 工具.
-- **返回值:**  无
+- **function:** Get end coordinate system
+- **Parameters**：`end`:  0 - flange, 1 - tool.
+- **Return value:**  NULL
 
 **12.10** `get_end_type()`
 
-- **功能:** 获取末端坐标系
-- **返回值:**  0 - 法兰, 1 - 工具.
+- **function:**  Obtain the end coordinate system
+- **Return value:**  0 - flange, 1 - tool.
 
-#### 13. 圆弧运动
+#### 13. Circular motion
 
 **13.1** `write_move_c(transpoint, endpoint, speed)`
 
-+ 功能：圆弧轨迹运动
-+ 参数说明：
-      `transpoint(list)`：圆弧通过点坐标
-      `endpoint (list)`：弧端点坐标
++ function：Arc trajectory motion
++ Parameters：
+      `transpoint(list)`：Arc passing through point coordinates
+      `endpoint (list)`：Arc endpoint coordinates
       ` speed(int)`： 1 ~ 100
-+ 返回值：无
++ Return value：NULL
 
-#### 14. 设置底部IO输入输出状态
+#### 14. Set bottom IO input/output status
 
 **14.1** `set_basic_output(transpoint, endpoint, speed)`
 
-+ **功能**：设置底座IO输出
-+ **参数说明**：
-  + `pin_no` (`int`) 引脚端口号
++ **function**：Set Base IO Output
++ **Parameters**：
+  + `pin_no` (`int`) Pin port number
   + `pin_signal` (`int`): 0 / 1
-+ **返回值**：无
++ **Return value**：NULL
 
 **14.2** `get_basic_input(pin_no)`
 
-- **功能:** 读取底座IO输入
-- **参数说明:**
-  + `pin_no` (`int`) 引脚端口号
-- **返回值:**无
+- **function:** Read base IO input
+- **Parameters:**
+  + `pin_no` (`int`) pin number 
+- **Return value:**NULL
 
 **14.3** `get_robot_status()`
 
-- **功能:** 上位机错误安全状态
-- **返回值:**  0-正常 1-机器人触发碰撞检测
-
+- **function:** Upper computer error security status
+- **Return value:**   0-Normal 1-Robot triggered collision detection
 
 
 
