--- a/6-SDKDevelopment/6.1-ApplicationBasePython.md
+++ b/6-SDKDevelopment/6.1-ApplicationBasePython.md
@@ -510,7 +510,96 @@ API (Application Programming Interface), also known as Application Programming I
 **14.3** `get_robot_status()`
 
 - **function:** Upper computer error security status
+- **Return value:**   0-Normal 1-Robot triggered collision detection\
+
+#### 15. Set up terminal 485 communication
+
+**15.1** `tool_serial_restore()`
+
++ **function**：485 factory reset
++ **Return value**：NULL
+
+**15.2** `tool_serial_ready()`
+
+- **function:** Set up 485 communication
+- **Return value:**   0 : not set  1 : Setup completed
+
+**15.3** `tool_serial_available()`
+
+- **function:**  Set up 485 communication
 - **Return value:**   0-Normal 1-Robot triggered collision detection
+
+**15.4** `tool_serial_read_data()`
+
+- **function:**  Read fixed length data. Before reading, read the buffer length first. After reading, the data will be cleared
+- **Parameters**：  data_len (int): The number of bytes to be read, range 1 ~ 45
+- **Return value:**   0 : not set  1 : Setup completed
+
+**15.5**  `tool_serial_write_data()`
+
+- **function:**  End 485 sends data， Data length range is 1 ~ 45 bytes
+- **Return value:**   0-Normal 1-Robot triggered collision detection
+
+**15.6**  `    tool_serial_flush()`
+
+- **function:**  Clear 485 buffer
+- **Return value:**   0-Normal 1-Robot triggered collision detection
+
+**15.7**  `    tool_serial_peek()`
+
+- **function:**  View the first data in the buffer, the data will not be cleared
+- **Return value:**    1 byte data
+
+**15.8**  `    tool_serial_set_baud(baud)`
+
+- **function:**  Set 485 baud rate, default 115200
+- **Parameters**:  baud (int): baud rate
+- **Return value:**   NULL
+
+**15.9**  `    tool_serial_set_timeout(max_time)`
+
+- **function:**  Set 485 timeout in milliseconds, default 30ms
+- **Parameters**:   max_time (int): timeout
+- **Return value:**   NULL
+
+**15.10**  `    tool_serial_set_timeout(max_time)`
+
+- **function:**  Set 485 timeout in milliseconds, default 30ms
+- **Parameters**:   max_time (int): timeout
+- **Return value:**   NULL
+
+#### 16. servo state value
+
+**16.1** `get_servo_speeds()`
+
++ **function**：Get joint speed (Only for mycobot 320)
++ **Return value**：  unit step/s
+
+**16.2** `get_servo_currents()`
+
++ **function**：Get joint current (Only for mycobot 320)
++ **Return value**：   0 ~ 3250 mA
+
+**16.3** `get_servo_status()`
+
++ **function**：Get joint status (Only for mycobot 320)
++ **Return value**： ` [voltage, sensor, temperature, current, angle, overload]`, a value of 0 means no error, a value of 1 indicates an error
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
