--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -47,4 +47,4 @@
 
  ---
 
-[← Previous Page](../2.1_320_M5_product/README.md)| [Next Page →](../2.1_320_M5_product/2.1.2-ControlCoreParameter.md)
+[← Previous Page](../2-ProductFeature/README.md)| [Next Page →](../2-ProductFeature/2.2-ControlCoreParameter.md)
