--- a/2-ProductFeature/2.2-ControlCoreParameter.md
+++ b/2-ProductFeature/2.2-ControlCoreParameter.md
@@ -36,4 +36,4 @@
 | Auxiliary Controller Flash| 4MB                |
 ---
 
-[← Previous Page](../2.1_320_M5_product/2.1.1-MachineSpecification.md)| [Next Page →](../2.1_320_M5_product/2.1.3-MechanicalStructureParameter.md)
+[← Previous Page](../2-ProductFeature/2.1-MachineSpecification.md)| [Next Page →](../2-ProductFeature/2.3-MechanicalStructureParameter.md)
