--- a/2-ProductFeature/2.3-MechanicalStructureParameter.md
+++ b/2-ProductFeature/2.3-MechanicalStructureParameter.md
@@ -26,4 +26,4 @@ Download link: [https://download.elephantrobotics.com/Product_3d_files/myCobot_3
 
 ---
 
-[← Previous Page](../2.1_320_M5_product/2.1.2-ControlCoreParameter.md)| [Next Page →](../2.1_320_M5_product/2.1.4-ElectricalCharacteristicParameter.md)
+[← Previous Page](../2-ProductFeature/2.2-ControlCoreParameter.md)| [Next Page →](../2-ProductFeature/2.4-ElectricalCharacteristicParameter.md)
