--- a/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
+++ b/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
@@ -117,4 +117,4 @@ The definitions of each tool I/O port are shown in the table below. It should be
 
 ---
 
-[← Previous Page](../2.1_320_M5_product/2.1.3-MechanicalStructureParameter.md)| [Next Page →](../2.1_320_M5_product/2.1.5-CoordinateSystem.md)
+[← Previous Page](../2-ProductFeature/2.3-MechanicalStructureParameter.md)| [Next Page →](../2-ProductFeature/2.5-CoordinateSystem.md)
