--- a/11-ApplicationBaseROS/11.2-ROS2/11.2.4-BasicFunction.md
+++ b/11-ApplicationBaseROS/11.2-ROS2/11.2.4-BasicFunction.md
@@ -79,6 +79,27 @@ width ="500"  align = "center">
 ros2 launch mercury_a1 simple_gui.launch.py
 ```
 
+<img src =../../resources/11-ApplicationBaseROS/mercuryA1_follow.png
+width ="500"  align = "center">
+
+接着，打开另一个ROS2环境终端：
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-1.jpg
+width ="500"  align = "center">
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-2.jpg
+width ="500"  align = "center">
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-3.png
+width ="500"  align = "center">
+
+然后运行命令：
+
+```bash
+ros2 run mercury_a1 simple_gui
+```
+
+
 <img src =../../resources/11-ApplicationBaseROS/mercuryA1_gui.png
 width ="500"  align = "center">
 
