--- a/11-ApplicationBaseROS/11.2-ROS2/11.2.4-BasicFunction.md
+++ b/11-ApplicationBaseROS/11.2-ROS2/11.2.4-BasicFunction.md
@@ -75,6 +75,26 @@ Then run the command:
 ros2 launch mercury_a1 simple_gui.launch.py
 ```
 
+<img src =../../resources/11-ApplicationBaseROS/mercuryA1_follow.png
+width ="500"  align = "center">
+
+Next, open another ROS2 environment terminal:
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-1.jpg
+width ="500"  align = "center">
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-2.jpg
+width ="500"  align = "center">
+
+<img src =../../resources/11-ApplicationBaseROS/11.2.1-3.png
+width ="500"  align = "center">
+
+Then run the command:
+
+```bash
+ros2 run mercury_a1 simple_gui
+```
+
 <img src =../../resources/11-ApplicationBaseROS/mercuryA1_gui.png
 width ="500"  align = "center">
 
