--- a/12-ApplicationBaseCPlus/12.1-download.md
+++ b/12-ApplicationBaseCPlus/12.1-download.md
@@ -36,7 +36,7 @@ Supported arm model: **mercury**<br>
 
 ## 2 Configure the Windows environment
 
-###2.1 Install vs2019
+### 2.1 Install vs2019
 
 - Download: <br>
 First download it on the official website[vs2019](https://visualstudio.microsoft.com/zh-hans/vs/)。<br><br>
@@ -77,7 +77,7 @@ vs2019 menu bar extension -- QT VS ToolS-- QT Versions-- add new qtversion Path 
 	
 ## 3 Configure the Linux environment
 
-3.1 Installing qt5.12.10
+### 3.1 Installing qt5.12.10
 
 - Download: <br>
 The download address is the same as for Windows, select the installation package on linux, see 8.1.2.2 above. <br>
