更新4章节内容

--- a/4-FirstInstallAndUse/4.1-ProductStandardList.md
+++ b/4-FirstInstallAndUse/4.1-ProductStandardList.md
@@ -10,7 +10,7 @@ Each product is numbered and detailed to ensure you can accurately refer to your
 
 | Serial number | Product |
 |------------|-----------------|
-| 1 | MyCobot 320 M5 Robotic Arm |
+| 1 | Mercury_A1 |
 | 2 | Product Brochure |
 | 3 | Product kit, including USB-Type C, jumper, M6*35, cup head hexagon, fully threaded, stainless steel screws |
 | 4 | 24V, 9.2A supporting power supply |
