--- a/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
+++ b/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
@@ -2,7 +2,7 @@
 
 ## 1 Structural installation and fixation
 
-myCobot weights 3.3 kg. Due to the fact that the center of gravity will change along with the movement of the robot during utilization, robot is required to be fixed on a solid base at the beginning. A fixed base, or mobile base are both acceptable.
+myCobot weights 3.5 kg. Due to the fact that the center of gravity will change along with the movement of the robot during utilization, robot is required to be fixed on a solid base at the beginning. A fixed base, or mobile base are both acceptable.
 
 #### Base Interface Size
 
@@ -10,8 +10,7 @@ myCobot weights 3.3 kg. Due to the fact that the center of gravity will change a
 
 <img src="../..//resources/4-FirstInstallAndUse/底座尺寸.jpg" alt="img-1" width="400" height=“auto” /> <br>
 
-- The end is mounted with flange and is compatible with both LEGO component holes and screw threaded holes. Please make sure that there are corresponding threaded holes on the fixed base before installing.
-
+- There is a flange installed on the end. Please make sure there are corresponding threaded holes on the fixed base before installation.
 
 #### *Before the installation, please confirm:*
 
@@ -39,34 +38,34 @@ myCobot must be powered on with an external power supply to provide sufficient p
 - Rated voltage: 24V
 - Rated current: 9.4A
 - Plug Type: R7B
-![image-20220620175457856](../../resources/4-FirstInstallAndUse/320-R7B.png)
+![image-20220620175457856](../resources/4-FirstInstallAndUse/320-R7B.png)
 
 **Note that you cannot just use the TypeC plugged into the M5Stack-basic for power.** Use an officially adapted power supply to avoid damage to the robotic arm.
 
 The use case diagram is shown in the following figure: (Please carefully align it with the use case diagram for connection)
 
 **Step 1:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
 <br/> 
 
 **Step 2:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
 <br/>
 
 **Step 3:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
 <br/>
 
 **Step 4:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
 <br/>
 
 **Step 5:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
 <br/>
 
 **Step 6:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
+<img  src="../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
 <br/>
 
 
@@ -74,7 +73,7 @@ The use case diagram is shown in the following figure: (Please carefully align i
 
 Make sure that the power adapter and emergency stop switch are connected, press the power switch **Start button (round)**, then the **LED light panel of ATOM at the end of the robot arm will light**, and the **LED light panel at the bottom of the robot arm will light up**. **BASIC interface** will display  **Atom communication status**.
 
-![led](../../resources/4-FirstInstallAndUse/led灯板.jpg)
+![led](../resources/4-FirstInstallAndUse/led灯板.jpg)
 
 ## 4 Basic function detection
 
