--- a/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
+++ b/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
@@ -7,7 +7,7 @@
 In this section we strongly recommend following the specified steps to remove the product. Not only does this help ensure that the product is not damaged during shipping, it also minimizes the risk of unexpected failure. Please read the following graphic guide carefully to ensure that your product is safe during the unboxing process.
 
 - **1** Check whether the box is damaged. If there is any damage, please contact the logistics company and the supplier in your region in time.
-- **2** Open the box and take out the product brochure, sponge packaging cover, myCobot robotic arm, supporting power supply, emergency stop switch, flat base, and accessory package.
+- **2** Open the box and take out the product brochure, sponge packaging cover, Mercury robotic arm, supporting power supply, emergency stop switch, flat base, and accessory package.
 - **3** Make sure each step is completed before proceeding to the next to prevent unnecessary damage or omissions.
 
 **Note:** After removing the product, please carefully inspect the appearance of each item. Please check the actual items in the box against the item list.
