--- a/3-UserNotes/3.2-TransportandStorage.md
+++ b/3-UserNotes/3.2-TransportandStorage.md
@@ -1,10 +1,20 @@
-# TransportandStorage
+# Transport and Storage
 
-## 1 Packing and packing
 
-## 2 Logistics and transportation
+![CheckTheBox_4](../resources/3-UserNotes/image/CheckTheBox_4.png)
 
-## 3 Equipment storage
+During transportation, the original packaging should be used for transporting the Mercury A1.During transportation, it should be ensured that the Mercury A1 is stable as a whole and secured through appropriate measures.
+
+During transportation and long-term storage, the environmental temperature should be maintained within the range of -20 to +55°C, with humidity ≤95% and no condensation.
+
+As robots are precision machinery, when removing the Mercury A1 from its packaging, it should be handled with care. During transportation, if it cannot be placed steadily, it may cause vibration and damage to internal components of the robot.
+
+After transportation is completed, the original packaging should be properly stored in a dry place for future repackaging and transportation needs.
+
+|<div align=center><img src="../resources/3-UserNotes/image/danger.png" alt="img-1" width="100" height=“auto” />| 
+| :--- |
+| 1 Not responsible for any damage incurred during shipping.. |
+| 2 Make sure to strictly follow the installation instructions when installing the robot. |
 
 ----
 [← Previous Section](3.1-SafetyInstruction.md#) | [Next Chapter →](3.3-MaintenanceandCare.md)
